<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.mycompany</groupId>
    <artifactId>Miinaharava</artifactId>
    <version>v0.4</version>
    <packaging>jar</packaging>
    
    <build>
        <plugins>
            
            <plugin>
                <version>3.1.0</version>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <classpathPrefix>lib/</classpathPrefix>
                        <mainClass>miinaharava.Main</mainClass>
                    </manifest>
                </archive>
            </configuration>
            </plugin>
			
			<plugin>
			  <groupId>com.akathist.maven.plugins.launch4j</groupId>
			  <artifactId>launch4j-maven-plugin</artifactId>
			  <executions>
				<execution>
				  <id>l4j-clui</id>
				  <phase>package</phase>
				  <goals><goal>launch4j</goal></goals>
					  <configuration>
						<headerType>gui</headerType>
						<outfile>target/Miinaharava-v0.4.exe</outfile>
						<jar>target/Miinaharava-v0.4.jar</jar>
						<errTitle>( ͡° ͜ʖ ͡°)</errTitle>
						<classPath>
						  <mainClass>miinaharava.Main</mainClass>
						  <addDependencies>true</addDependencies>
						  <preCp>anything</preCp>
						</classPath>
						<icon>src/main/resources/Images/Logo.ico</icon>
						<jre>
						  <minVersion>1.5.0</minVersion>
						  <opts>
							<opt>-Djava.endorsed.dirs=./endorsed</opt>
						  </opts>
						</jre>
						<versionInfo>
						  <fileVersion>1.0.0.0</fileVersion>
						  <txtFileVersion>${project.version}</txtFileVersion>
						  <fileDescription>${project.name}</fileDescription>
						  <copyright>my copyright</copyright>
						  <productVersion>1.0.0.0</productVersion>
						  <txtProductVersion>txt product version</txtProductVersion>
						  <productName>Botbier</productName>
						  <internalName>MSWBB</internalName>
						  <originalFilename>original.exe</originalFilename>
						</versionInfo>
					  </configuration>
				</execution>
			  </executions>
			</plugin>
			
			
           
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>4.5.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>4.5.0</version>
            <type>jar</type>
        </dependency>
    </dependencies>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
</project>